--- a/WebLegemClient/src/common/directives/asociar-documento/asociar-documento.directive.html
+++ b/WebLegemClient/src/common/directives/asociar-documento/asociar-documento.directive.html
@@ -3,8 +3,8 @@
     <div class='a-modal-dialog'>
 
         <div class='a-modal-close verde'>
-            <div class="a-titulo-modal verde">Asociar Documento</div>
-            <button title="Cerrar dialogo" ng-click="vm.cerrarDialogo()">
+            <div class="a-titulo-modal verde">{{vm.language.strings.AsociarDocumento}}</div>
+            <button title="{{vm.language.strings.CerrarDialogo}}" ng-click="vm.cerrarDialogo()">
                 <span class="ico-times"></span>
             </button>
         </div>
