--- a/WebLegemClient/src/common/directives/footer/wlegem-footer.directive.html
+++ b/WebLegemClient/src/common/directives/footer/wlegem-footer.directive.html
@@ -4,16 +4,16 @@
             <p>{{vm.language.strings.Contactenos}}</p>
             <hr />
             <span class="ico-university ico_f2"></span> {{vm.language.strings.UniversidadNarino}}</br>
-            <span class="ico2-location2 ico_f2"></span> Torobajo - Calle 18 Crr 50</br>
-            <span class="ico-phone ico_f2"></span> PBX: (2)-7311449 - 18000957071</br>
+            <span class="ico2-location2 ico_f2"></span> {{vm.language.strings.Torobajo}}</br>
+            <span class="ico-phone ico_f2"></span> {{vm.language.strings.PBX}}</br>
             <span class="ico-envelope ico_f2"></span> {{vm.language.strings.Email}}: planeacion@udenar.edu.co
         </div>
         <div id="f_2">
             <p>{{vm.language.strings.Siguenos}}</p>
             <hr />
-            <a class="ico-facebook-square ico_f" href="https://www.facebook.com/udenar"></a>
-            <a class="ico-twitter-square ico_f" href="https://twitter.com/Udenar"></a><br />
-            <span class="ico-university f_link"><a class="f_link" href="http://www.udenar.edu.co/"> {{vm.language.strings.UniversidadNarino}}</a>   </span>
+            <a class="ico-facebook-square ico_f"  title="{{vm.language.strings.Facebook}}" href="https://www.facebook.com/udenar"></a>
+            <a class="ico-twitter-square ico_f"  title="{{vm.language.strings.Twitter}}" href="https://twitter.com/Udenar"></a><br />
+            <span class="ico-university f_link"><a  title="{{vm.language.strings.UniversidadNarino}}" class="f_link" href="http://www.udenar.edu.co/"> {{vm.language.strings.UniversidadNarino}}</a>   </span>
 
         </div>
         <div id="f_3">
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="sub_footer2">
-        <p>Copyright © 2016 - Universidad de Nariño - San Juan de Pasto - Colombia</p>
+        <p>{{vm.language.strings.Copyright}}</p>
     </div>
 
 </div>
