--- a/WebLegemClient/src/common/directives/fotografia/fotografia.directive.html
+++ b/WebLegemClient/src/common/directives/fotografia/fotografia.directive.html
@@ -4,7 +4,7 @@
     <div class='a-modal-dialog'>
         <div class='a-modal-close verde'>
             <div class="a-titulo-modal verde">{{vm.language.strings.HacerFoto}}</div>
-            <button title="Cerrar camara" ng-click="vm.cerrarCamara()">
+            <button title="{{vm.language.strings.CerrarCamara}}" ng-click="vm.cerrarCamara()">
                 <span class="ico-times"></span>
             </button>
         </div>
