--- a/WebLegemClient/src/common/directives/info-anotacion/info-anotacion.directive.html
+++ b/WebLegemClient/src/common/directives/info-anotacion/info-anotacion.directive.html
@@ -8,7 +8,7 @@
                     <a>{{vm.language.strings.Anotaciones}}</a>
                 </span>
             </div>
-            <button class="btn_ico" title="Cerrar dialogo" ng-click="hideModal()">
+            <button class="btn_ico" title="{{vm.language.strings.CerrarDialogo}}" ng-click="hideModal()">
                 <span class=" ico-times"></span>
             </button>
         </div>
