--- a/WebLegemClient/src/common/directives/info-rol/info-rol.directive.html
+++ b/WebLegemClient/src/common/directives/info-rol/info-rol.directive.html
@@ -3,8 +3,8 @@
     <div class='a-modal-overlay'></div><!--Simula la opacidad de fondo del dialogo-->
     <div class='a-modal-dialog'>
         <div class='a-modal-close verde'>
-            <p class="a-titulo-modal verde">{{vm.language.strings.permisos}}</p>
-            <button title="Cerrar dialogo" ng-click="hideModal()">
+            <p class="a-titulo-modal verde">{{vm.language.strings.Permisos}}</p>
+            <button title="{{vm.language.strings.CerrarDialogo}}" ng-click="hideModal()">
                 <span class=" ico-times"></span>
             </button>
         </div>
