--- a/WebLegemClient/src/common/directives/resultado-busqueda/wlegem-resultado-busqueda.directive.html
+++ b/WebLegemClient/src/common/directives/resultado-busqueda/wlegem-resultado-busqueda.directive.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="control_tarjeta">
-        <a href="{{vm.serviceUrl}}/Files/{{ contenido.archivo.id }}">
+        <a  title="{{vm.language.strings.Descargar}}" href="{{vm.serviceUrl}}/Files/{{ contenido.archivo.id }}">
             <span class="ico-download"></span>{{vm.language.strings.Descargar}}
         </a>
     </div>
