--- a/WebLegemClient/src/common/directives/mini-footer/wlegem-mini-footer.directive.html
+++ b/WebLegemClient/src/common/directives/mini-footer/wlegem-mini-footer.directive.html
@@ -15,6 +15,6 @@
         </div>
     </div>
     <div class="sub_mini_footer2">
-        <p>Copyright © 2016 - {{vm.language.strings.UniversidadNarino}} - San Juan de Pasto - Colombia</p>
+        <p> {{vm.language.strings.Copyright}}</p>
     </div>
 </div>
