--- a/WebLegemClient/src/fuentes/CREAMPUF/demo.html
+++ b/WebLegemClient/src/fuentes/CREAMPUF/demo.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>@font-face Demo</title>
-	<link rel="stylesheet" href="fonts.css" type="text/css" charset="utf-8" />
+	<link rel="stylesheet"  title="" href="fonts.css" type="text/css" charset="utf-8" />
 	<style type="text/css">
 	body {
 		background-color:white;
@@ -42,7 +42,7 @@
 	<br>
 	<br>
 	<div class="hint">
-		<a href="http://www.font2web.com/searchfreewebfont.php?Creampuff">Recommended: Click here to get a fast, optimized webfont alternative of Creampuff!</a><br><br>
+		<a title="" href="http://www.font2web.com/searchfreewebfont.php?Creampuff">Recommended: Click here to get a fast, optimized webfont alternative of Creampuff!</a><br><br>
 		Tip: Click on the purple <strong>Sign Up for Free!</strong> button and then click on the <strong>FREE PLAN</strong> link.
 	</div>
 
