--- a/WebLegemClient/src/fuentes/abril-fatface/sample.html
+++ b/WebLegemClient/src/fuentes/abril-fatface/sample.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>CSS3 @font-face</title>
-	<link rel="stylesheet" href="sample.css" type="text/css" charset="utf-8" />
+	<link rel="stylesheet" title="" href="sample.css" type="text/css" charset="utf-8" />
 	<style type="text/css">
 	body {
 		background-color: #fff;
